@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}},
 
 {{$NEXT}}
+  - Added include option for Win32::Vcpkg::Package and Win32::Vcpkg::List (gh#7)
 
 0.03      2020-03-16 07:51:37 -0600
   - Better synchronization with status file (gh#6)
